--- a/facility.html
+++ b/facility.html
@@ -101,7 +101,7 @@ justify-content: space-between;
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-4 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active " aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active " aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="About.html">About Us</a>
@@ -238,7 +238,7 @@ justify-content: space-between;
             Nav links
           </h6>
           <p>
-            <a href="home.html" class="text-reset">Home</a>
+            <a href="index.html" class="text-reset">Home</a>
           </p>
           <p>
             <a href="About.html" class="text-reset">About us</a>
