--- a/feedback.html
+++ b/feedback.html
@@ -109,7 +109,7 @@ input {
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-4 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active " aria-current="page" href="home.html">Home</a>
+                <a class="nav-link active " aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="About.html">About Us</a>
@@ -283,7 +283,7 @@ input {
             Nav links
           </h6>
           <p>
-            <a href="home.html" class="text-reset">Home</a>
+            <a href="index.html" class="text-reset">Home</a>
           </p>
           <p>
             <a href="About.html" class="text-reset">About us</a>
